// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListView field filter should switch back to default mode on ESC keydown 1`] = `
Object {
  "displayMode": "DISPLAY_MODE_SEARCH",
  "displayedItems": Array [
    Object {
      "checked": true,
      "index": 1,
      "label": "Albania",
      "onChange": [Function],
      "value": "country2",
    },
    Object {
      "checked": true,
      "index": 2,
      "label": "Algeria",
      "onChange": [Function],
      "value": "country3",
    },
  ],
  "emptyLabel": undefined,
  "getItemHeight": [Function],
  "headerDefault": Array [
    Object {
      "icon": "talend-search",
      "id": "my-list-view-search",
      "label": "Search for specific values",
      "onClick": [Function],
    },
  ],
  "headerInput": Array [
    Object {
      "icon": "talend-cross",
      "id": "abort",
      "label": "Abort",
      "onClick": [Function],
    },
  ],
  "headerLabel": "Countries",
  "items": Array [
    Object {
      "checked": false,
      "index": 0,
      "label": "Afghanistan",
      "onChange": [Function],
      "value": "country1",
    },
    Object {
      "checked": true,
      "index": 1,
      "label": "Albania",
      "onChange": [Function],
      "value": "country2",
    },
    Object {
      "checked": true,
      "index": 2,
      "label": "Algeria",
      "onChange": [Function],
      "value": "country3",
    },
    Object {
      "checked": false,
      "index": 3,
      "label": "Andorra",
      "onChange": [Function],
      "value": "country4",
    },
  ],
  "noResultLabel": undefined,
  "onAddKeyDown": [Function],
  "onInputChange": [Function],
  "onToggleAll": [Function],
  "required": true,
  "searchCriteria": "ia",
  "searchPlaceholder": undefined,
  "toggleAllChecked": true,
}
`;

exports[`ListView field filter should switch back to default mode on ESC keydown 2`] = `
Object {
  "displayMode": "DISPLAY_MODE_DEFAULT",
  "displayedItems": Array [
    Object {
      "checked": false,
      "index": 0,
      "label": "Afghanistan",
      "onChange": [Function],
      "value": "country1",
    },
    Object {
      "checked": true,
      "index": 1,
      "label": "Albania",
      "onChange": [Function],
      "value": "country2",
    },
    Object {
      "checked": true,
      "index": 2,
      "label": "Algeria",
      "onChange": [Function],
      "value": "country3",
    },
    Object {
      "checked": false,
      "index": 3,
      "label": "Andorra",
      "onChange": [Function],
      "value": "country4",
    },
  ],
  "emptyLabel": undefined,
  "getItemHeight": [Function],
  "headerDefault": Array [
    Object {
      "icon": "talend-search",
      "id": "my-list-view-search",
      "label": "Search for specific values",
      "onClick": [Function],
    },
  ],
  "headerInput": Array [
    Object {
      "icon": "talend-search",
      "id": "my-list-view-search",
      "label": "Search for specific values",
      "onClick": [Function],
    },
  ],
  "headerLabel": "Countries",
  "items": Array [
    Object {
      "checked": false,
      "index": 0,
      "label": "Afghanistan",
      "onChange": [Function],
      "value": "country1",
    },
    Object {
      "checked": true,
      "index": 1,
      "label": "Albania",
      "onChange": [Function],
      "value": "country2",
    },
    Object {
      "checked": true,
      "index": 2,
      "label": "Algeria",
      "onChange": [Function],
      "value": "country3",
    },
    Object {
      "checked": false,
      "index": 3,
      "label": "Andorra",
      "onChange": [Function],
      "value": "country4",
    },
  ],
  "noResultLabel": undefined,
  "onAddKeyDown": [Function],
  "onInputChange": [Function],
  "onToggleAll": [Function],
  "required": true,
  "searchCriteria": undefined,
  "searchPlaceholder": undefined,
  "toggleAllChecked": false,
}
`;

exports[`ListView field filter should switch back to default mode on abort button click 1`] = `
Object {
  "displayMode": "DISPLAY_MODE_SEARCH",
  "displayedItems": Array [
    Object {
      "checked": true,
      "index": 1,
      "label": "Albania",
      "onChange": [Function],
      "value": "country2",
    },
    Object {
      "checked": true,
      "index": 2,
      "label": "Algeria",
      "onChange": [Function],
      "value": "country3",
    },
  ],
  "emptyLabel": undefined,
  "getItemHeight": [Function],
  "headerDefault": Array [
    Object {
      "icon": "talend-search",
      "id": "my-list-view-search",
      "label": "Search for specific values",
      "onClick": [Function],
    },
  ],
  "headerInput": Array [
    Object {
      "icon": "talend-cross",
      "id": "abort",
      "label": "Abort",
      "onClick": [Function],
    },
  ],
  "headerLabel": "Countries",
  "items": Array [
    Object {
      "checked": false,
      "index": 0,
      "label": "Afghanistan",
      "onChange": [Function],
      "value": "country1",
    },
    Object {
      "checked": true,
      "index": 1,
      "label": "Albania",
      "onChange": [Function],
      "value": "country2",
    },
    Object {
      "checked": true,
      "index": 2,
      "label": "Algeria",
      "onChange": [Function],
      "value": "country3",
    },
    Object {
      "checked": false,
      "index": 3,
      "label": "Andorra",
      "onChange": [Function],
      "value": "country4",
    },
  ],
  "noResultLabel": undefined,
  "onAddKeyDown": [Function],
  "onInputChange": [Function],
  "onToggleAll": [Function],
  "required": true,
  "searchCriteria": "ia",
  "searchPlaceholder": undefined,
  "toggleAllChecked": true,
}
`;

exports[`ListView field filter should switch back to default mode on abort button click 2`] = `
Object {
  "displayMode": "DISPLAY_MODE_DEFAULT",
  "displayedItems": Array [
    Object {
      "checked": false,
      "index": 0,
      "label": "Afghanistan",
      "onChange": [Function],
      "value": "country1",
    },
    Object {
      "checked": true,
      "index": 1,
      "label": "Albania",
      "onChange": [Function],
      "value": "country2",
    },
    Object {
      "checked": true,
      "index": 2,
      "label": "Algeria",
      "onChange": [Function],
      "value": "country3",
    },
    Object {
      "checked": false,
      "index": 3,
      "label": "Andorra",
      "onChange": [Function],
      "value": "country4",
    },
  ],
  "emptyLabel": undefined,
  "getItemHeight": [Function],
  "headerDefault": Array [
    Object {
      "icon": "talend-search",
      "id": "my-list-view-search",
      "label": "Search for specific values",
      "onClick": [Function],
    },
  ],
  "headerInput": Array [
    Object {
      "icon": "talend-search",
      "id": "my-list-view-search",
      "label": "Search for specific values",
      "onClick": [Function],
    },
  ],
  "headerLabel": "Countries",
  "items": Array [
    Object {
      "checked": false,
      "index": 0,
      "label": "Afghanistan",
      "onChange": [Function],
      "value": "country1",
    },
    Object {
      "checked": true,
      "index": 1,
      "label": "Albania",
      "onChange": [Function],
      "value": "country2",
    },
    Object {
      "checked": true,
      "index": 2,
      "label": "Algeria",
      "onChange": [Function],
      "value": "country3",
    },
    Object {
      "checked": false,
      "index": 3,
      "label": "Andorra",
      "onChange": [Function],
      "value": "country4",
    },
  ],
  "noResultLabel": undefined,
  "onAddKeyDown": [Function],
  "onInputChange": [Function],
  "onToggleAll": [Function],
  "required": true,
  "searchCriteria": undefined,
  "searchPlaceholder": undefined,
  "toggleAllChecked": false,
}
`;

exports[`ListView field render should render ListView 1`] = `
<I18n
  bindI18n="languageChanged loaded"
  bindStore="added removed"
  errorMessage="This is wrong"
  i18n={Object {}}
  id="my-list-view"
  isSwitchBox={true}
  isValid={true}
  ns={
    Array [
      "tui-forms",
    ]
  }
  nsMode="default"
  onChange={[MockFunction]}
  onFinish={[MockFunction]}
  schema={
    Object {
      "description": "This is the ListView field",
      "disabled": false,
      "required": true,
      "title": "Countries",
      "titleMap": Array [
        Object {
          "name": "Afghanistan",
          "value": "country1",
        },
        Object {
          "name": "Albania",
          "value": "country2",
        },
        Object {
          "name": "Algeria",
          "value": "country3",
        },
        Object {
          "name": "Andorra",
          "value": "country4",
        },
      ],
    }
  }
  translateFuncName="t"
  usePureComponent={false}
  value={
    Array [
      "country2",
      "country3",
    ]
  }
  wait={false}
  withRef={false}
/>
`;

exports[`ListView field render should render no items message 1`] = `
<div
  className="theme-tc-listview tc-listview"
>
  <HeaderListView
    containerProps={
      Object {
        "aria-describedby": "my-list-view-description my-list-view-error",
      }
    }
    displayMode="DISPLAY_MODE_DEFAULT"
    displayedItems={Array []}
    getItemHeight={[Function]}
    headerDefault={
      Array [
        Object {
          "icon": "talend-search",
          "id": "my-list-view-search",
          "label": "Search for specific values",
          "onClick": [Function],
        },
      ]
    }
    headerLabel="Countries"
    i18n={Object {}}
    id="my-list-view"
    isSwitchBox={false}
    items={Array []}
    onAddKeyDown={[Function]}
    onInputChange={[Function]}
    onToggleAll={[Function]}
    required={true}
    searchCriteria={null}
    t={[Function]}
    tReady={false}
    toggleAllChecked={true}
  >
    <Translate(Header)
      headerDefault={
        Array [
          Object {
            "icon": "talend-search",
            "id": "my-list-view-search",
            "label": "Search for specific values",
            "onClick": [Function],
          },
        ]
      }
      headerLabel="Countries"
      nbItems={0}
      nbItemsSelected={0}
      required={true}
      t={[Function]}
    >
      <I18n
        bindI18n="languageChanged loaded"
        bindStore="added removed"
        headerDefault={
          Array [
            Object {
              "icon": "talend-search",
              "id": "my-list-view-search",
              "label": "Search for specific values",
              "onClick": [Function],
            },
          ]
        }
        headerLabel="Countries"
        i18n={Object {}}
        nbItems={0}
        nbItemsSelected={0}
        ns={
          Array [
            "tui-components",
          ]
        }
        nsMode="default"
        required={true}
        t={[Function]}
        translateFuncName="t"
        usePureComponent={false}
        wait={false}
        withRef={false}
      >
        <Header
          headerDefault={
            Array [
              Object {
                "icon": "talend-search",
                "id": "my-list-view-search",
                "label": "Search for specific values",
                "onClick": [Function],
              },
            ]
          }
          headerLabel="Countries"
          i18n={Object {}}
          nbItems={0}
          nbItemsSelected={0}
          required={true}
          t={[Function]}
          tReady={false}
        >
          <header
            className="theme-tc-listview-header tc-listview-header"
          >
            <strong>
              Countries
              *
            </strong>
            <div
              className="actions"
            >
              <Action
                btooltipPlacement="bottom"
                hideLabel={true}
                icon="talend-search"
                key="0-listview-header-action"
                label="Search for specific values"
                link={true}
                onClick={[Function]}
              >
                <Translate(ActionButton)
                  btooltipPlacement="bottom"
                  hideLabel={true}
                  icon="talend-search"
                  label="Search for specific values"
                  link={true}
                  onClick={[Function]}
                >
                  <I18n
                    bindI18n="languageChanged loaded"
                    bindStore="added removed"
                    btooltipPlacement="bottom"
                    hideLabel={true}
                    i18n={Object {}}
                    icon="talend-search"
                    label="Search for specific values"
                    link={true}
                    ns={
                      Array [
                        "tui-components",
                      ]
                    }
                    nsMode="default"
                    onClick={[Function]}
                    translateFuncName="t"
                    usePureComponent={false}
                    wait={false}
                    withRef={false}
                  >
                    <ActionButton
                      available={true}
                      bsStyle="default"
                      btooltipPlacement="bottom"
                      disabled={false}
                      hideLabel={true}
                      i18n={Object {}}
                      icon="talend-search"
                      inProgress={false}
                      label="Search for specific values"
                      link={true}
                      loading={false}
                      onClick={[Function]}
                      t={[Function]}
                      tReady={false}
                      tooltipPlacement="top"
                    >
                      <TooltipTrigger
                        label="Search for specific values"
                        tooltipPlacement="top"
                      >
                        <Button
                          active={false}
                          aria-label="Search for specific values"
                          block={false}
                          bsClass="btn"
                          bsStyle="link"
                          className="btn-icon-only"
                          disabled={false}
                          onClick={[Function]}
                          onFocus={[Function]}
                          onMouseDown={[Function]}
                          onMouseOver={[Function]}
                          role="link"
                        >
                          <button
                            aria-label="Search for specific values"
                            className="btn-icon-only btn btn-link"
                            disabled={false}
                            onClick={[Function]}
                            onFocus={[Function]}
                            onMouseDown={[Function]}
                            onMouseOver={[Function]}
                            role="link"
                            type="button"
                          >
                            <Icon
                              key="icon"
                              name="talend-search"
                            >
                              <svg
                                aria-hidden="true"
                                className="theme-tc-svg-icon tc-svg-icon"
                                focusable="false"
                                name="talend-search"
                                title={null}
                              >
                                <use
                                  xlinkHref="#talend-search"
                                />
                              </svg>
                            </Icon>
                          </button>
                        </Button>
                      </TooltipTrigger>
                    </ActionButton>
                  </I18n>
                </Translate(ActionButton)>
              </Action>
            </div>
          </header>
        </Header>
      </I18n>
    </Translate(Header)>
  </HeaderListView>
  <span
    className="theme-empty-message"
  >
    This list is empty.
  </span>
</div>
`;
